--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/khedesandeep/testactions/issues"
   },
   "homepage": "https://github.com/khedesandeep/testactions#readme",
-  "dependencies": {
+  "devDependencies": {
     "codebaseguardian": "^1.0.0"
   }
 }
